# ApkVersionChecker

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/apkversionchecker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/apkversionchecker/: Apis.kt  App.java  AppVersion.kt  BaseBackupApkFileActivity.kt  MainActivity.kt  UpdateSetting.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/apkversionchecker/: ExampleUnitTest.kt
bsdiff/: build.gradle
bspatch/: bspatch-release.aar  build.gradle
format/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/libs/: bspatch.aar
lib/src/androidTest/java/com/dhy/versionchecker/: ExampleInstrumentedTest.java  PatchVersionTest.kt
lib/src/main/: AndroidManifest.xml
lib/src/main/java/com/dhy/versionchecker/: ActivityLifecycleCallbacks2.kt  ApkFileProvider.kt  Digest.kt  Ext.kt  IUpdateSetting.kt  IVersion.java  MdLink.kt  NewUpdateActivity.kt  PatchUtils.java  PatchVersion.kt  Rx2Wrapper.kt  Rx3Wrapper.kt  RxWrapper.kt  SignUtils.java  VersionUtil.kt
lib/src/main/java/com/github/sisong/: HPatch.java
lib/src/main/jni/: CMakeLists.txt  PatchUtils.c
lib/src/main/res/drawable/: avc_button_bg.xml
lib/src/main/res/layout/: activity_new_update.xml  avc_activity_new_update.xml
lib/src/main/res/values/: strings.xml  styles.xml
lib/src/test/java/com/dhy/versionchecker/: BsPatchTest.kt  (+3 more)
(+14 files in other folders)
